# sql2dbsp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
SQL-compiler/: compile-jit.sh  pom.xml
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/: CompilerMain.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/: CompilerOptions.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/backend/: DBSPCompiler.java  ToCsvVisitor.java  ToDotVisitor.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/frontend/: AggregateCompiler.java  CalciteToDBSPCompiler.java  ExpressionCompiler.java  ModifyTableTranslation.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/compiler/sqlparser/: CalciteCompiler.java  Catalog.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/ir/: CircuitVisitor.java  InnerVisitor.java
SQL-compiler/src/main/java/org/dbsp/sqlCompiler/ir/expression/: DBSPClosureExpression.java  DBSPExpression.java  DBSPOpcode.java  (+2 more)
SQL-compiler/src/main/java/org/dbsp/sqllogictest/: Main.java  SqlTestQuery.java
SQL-compiler/src/main/java/org/dbsp/sqllogictest/executors/: CalciteExecutor.java  DBSPExecutor.java  DbspJdbcExecutor.java  JDBCExecutor.java
SQL-compiler/src/main/java/org/dbsp/util/: TestStatistics.java  Utilities.java
SQL-compiler/src/test/java/org/dbsp/sqlCompiler/compiler/: BaseSQLTests.java  OtherTests.java  TimeTests.java
lib/genlib/: Cargo.toml
lib/hashing/: Cargo.toml
lib/hashing/src/: lib.rs
lib/readers/: Cargo.toml
lib/sqllib/: Cargo.toml
lib/sqlvalue/: Cargo.toml
temp/: Cargo.toml
(+46 files in other folders)
